# torrensic

./: .gitignore  Cargo.toml
src/: builder.rs  client.rs  main.rs  parse.rs  parser.rs  torrent_info.rs  tracker_client.rs  ui.rs  utils.rs
src/builder/: file_builder.rs
src/client/: admin_message.rs  connection.rs  handshake.rs  manager.rs  message.rs  peer.rs  peer_handler.rs  peer_manager.rs  peer_wire.rs  piece_strategy.rs  strategy.rs  tracker.rs
src/client/connection/: read_task.rs
src/client/message/: cancel.rs  have.rs
src/client/peer/: connection.rs  message.rs  wire_protocol_task.rs
src/client/peer/connection/: handshake.rs  read_task.rs
src/client/peer/message/: bitfield.rs  have.rs  interested.rs  keep_alive.rs  not_interested.rs  piece.rs
src/client/peer_handler/: connection.rs  message.rs  peer_handler.rs
src/client/peer_handler/connection/: handshake.rs  read_task.rs
src/client/peer_handler/message/: choke.rs  request.rs  unchoke.rs
src/parser/: bootstrap_info.rs  file_info.rs  file_path_info.rs  fileinfo.rs  info.rs  magnet_message.rs  metadata.rs  torrent_info.rs  tracker_info.rs  trackerinfo.rs
src/torrent_info/: magnet_acquirer.rs  tracker_acquirer.rs
src/torrent_info/magnet_acquirer/: admin_message.rs  peer_acquirer.rs
src/ui/: components.rs  controller.rs  data.rs  widgets.rs
src/ui/components/: title.rs  torrent_progress.rs
src/ui/widgets/: map_info.rs  panel_tabs.rs  pieces_info.rs  progress.rs  progress_bar.rs  torrent_desc.rs  torrent_info.rs  torrent_list.rs
src/utils/: bitfield.rs  ring_buffer.rs
