[package]
name = "torrensic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bendy = "0.3.3"
bitvec = "1.0.1"
byteorder = "1.4.3"
enum_dispatch = "0.3.11"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["default-tls", "multipart"] }
sha1 = "0.10.5"
tokio = { version = "1.28.2", features = ["full"] }
trust-dns-resolver = "0.22.0"
url = "2.4.0"
urlencoding = "2.1.2"
